# sonar_pi

./: .gitignore  CMakeLists.txt  Plugin.cmake  README.md  config.h.in
.circleci/: config.yml
.github/workflows/: linux.yml  macos.yml  windows.yml
cmake/: CmakeSetup.cmake  Metadata.cmake  PluginCompiler.cmake  PluginInstall.cmake  PluginLibs.cmake  PluginOptions.cmake  Targets.cmake
flatpak/: org.opencpn.OpenCPN.Plugin.sonar.yaml
include/: IDataReceiver.h  PreferencesWindow.h  PreferencesWindowTest.h  SerialDataReceiver.h  SonarDisplayWindow.h  SonarPane.h  SonarSimulator.h  UDPDataReceiver.h  pi_common.h  sonar_pi.h
src/: PreferencesWindow.cpp  SerialDataReceiver.cpp  SonarDisplayWindow.cpp  SonarPane.cpp  SonarSimulator.cpp  UDPDataReceiver.cpp  serialib.cpp  sonar_pi.cpp
